--- a/Productos/package.json
+++ b/Productos/package.json
@@ -1,23 +1,29 @@
 {
   "name": "productos",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-  "dev": "nodemon src/index.js"
-},
-  "keywords": [],
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development nodemon src/index.js",
+    "start": "node src/index.js"
+  },
+  "keywords": [
+    "node",
+    "express",
+    "mysql",
+    "rest-api"
+  ],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "express-rate-limit": "^7.5.0",
-    "mysql2": "^3.14.1"
+    "express-rate-limit": "7.5.0",
+    "mysql2": "^3.14.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "3.1.10"
   }
 }
